fix(Gap): remove `gl-gap-y-6` addition
use `gl-row-gap-6` instead

--- a/src/scss/utility-mixins/spacing.scss
+++ b/src/scss/utility-mixins/spacing.scss
@@ -882,12 +882,6 @@
   }
 }
 
-@mixin gl-gap-y-6 {
-  > * + * {
-    margin-top: #{$gl-spacing-scale-6};
-  }
-}
-
 @mixin gl-gap-1 {
   gap: $gl-spacing-scale-1;
 }
